[gd_scene load_steps=10 format=3 uid="uid://dknx8wj7336co"]

[ext_resource type="Texture2D" uid="uid://co6db6ry8ra2i" path="res://Flappy Bird Assets/message.png" id="1_0l58p"]
[ext_resource type="Script" path="res://UI/scipts/menu_layer.gd" id="1_g6qkk"]
[ext_resource type="Texture2D" uid="uid://b11edjobduj0y" path="res://Flappy Bird Assets/gameover.png" id="3_3ifta"]
[ext_resource type="FontFile" uid="uid://d0twqpodeymus" path="res://Flappy Bird Assets/fonts/Rubik-ExtraBold.ttf" id="3_22q48"]
[ext_resource type="FontFile" uid="uid://b3cjjhimar3p5" path="res://Flappy Bird Assets/fonts/flappyfont.TTF" id="4_4dpjp"]

[sub_resource type="ImageTexture" id="ImageTexture_3sydw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jwagw"]
texture = SubResource("ImageTexture_3sydw")
draw_center = false

[sub_resource type="ImageTexture" id="ImageTexture_ouii6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vjxn6"]
texture = SubResource("ImageTexture_ouii6")
draw_center = false

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource("1_g6qkk")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="StartMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 56.0
offset_top = 64.0
offset_right = 432.0
offset_bottom = 106.0
theme_override_fonts/normal_font = ExtResource("3_22q48")
theme_override_font_sizes/normal_font_size = 30
text = "لا تترك الصلاة من اجل اللعبة!"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="StartMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 72.0
offset_top = 208.0
offset_right = 392.0
offset_bottom = 672.0
texture = ExtResource("1_0l58p")

[node name="Button" type="Button" parent="StartMenu"]
layout_mode = 0
offset_right = 488.0
offset_bottom = 856.0
theme_override_styles/normal = SubResource("StyleBoxTexture_jwagw")
theme_override_styles/hover = SubResource("StyleBoxTexture_vjxn6")

[node name="GameOverMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel2" type="RichTextLabel" parent="GameOverMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 56.0
offset_top = 64.0
offset_right = 432.0
offset_bottom = 106.0
theme_override_fonts/normal_font = ExtResource("3_22q48")
theme_override_font_sizes/normal_font_size = 30
text = "لا تترك الصلاة من اجل اللعبة!"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="GameOverMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 48.0
offset_top = 224.0
offset_right = 414.0
offset_bottom = 304.0
texture = ExtResource("3_3ifta")

[node name="Score" type="Label" parent="GameOverMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 136.0
offset_top = 368.0
offset_right = 472.0
offset_bottom = 402.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_4dpjp")
theme_override_font_sizes/font_size = 30
text = "Score :"

[node name="BestSCore" type="Label" parent="GameOverMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 136.0
offset_top = 408.0
offset_right = 480.0
offset_bottom = 442.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_4dpjp")
theme_override_font_sizes/font_size = 30
text = "Best Score :"

[node name="Restart" type="Button" parent="GameOverMenu"]
texture_filter = 1
layout_mode = 0
offset_left = 104.0
offset_top = 480.0
offset_right = 360.0
offset_bottom = 552.0
theme_override_fonts/font = ExtResource("4_4dpjp")
theme_override_font_sizes/font_size = 30
action_mode = 0
text = "Restart"
icon_alignment = 1

[connection signal="pressed" from="StartMenu/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GameOverMenu/Restart" to="." method="_on_restart_pressed"]
